<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.register.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primary_color"
        app:navigationIcon="@drawable/ic_back" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:text="@string/label_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        style="@style/SnapcookTextStyle.DisplayLarge"/>

    <TextView
        android:id="@+id/tvLoginSubtitle"
        android:text="@string/label_register_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="@id/tvLoginTitle"
        style="@style/SnapcookTextStyle"/>

    <TextView
        android:id="@+id/tv_full_name_label"
        style="@style/SnapcookTextStyle.Title"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:text="@string/label_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="12dp"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_person"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_20dp"
            android:drawablePadding="@dimen/dimen_8dp"
            android:hint="@string/masukkan_nama_lengkap_mu"
            android:background="@drawable/bg_bordered_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvEmailLabel"
        style="@style/SnapcookTextStyle.Title"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:text="@string/label_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="12dp"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_email"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_20dp"
            android:drawablePadding="@dimen/dimen_8dp"
            android:hint="@string/hint_email"
            android:background="@drawable/bg_bordered_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPassword"
        style="@style/SnapcookTextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:text="@string/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="12dp"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tvPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_lock"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_20dp"
            android:drawablePadding="@dimen/dimen_8dp"
            android:hint="@string/hint_password"
            android:background="@drawable/bg_bordered_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_height="wrap_content"
        style="@style/SnapcookButton.LessRadius"
        android:text="@string/action_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_register"
            style="@style/SnapcookTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="@string/label_do_have_account"
            app:layout_constraintStart_toStartOf="@id/tvLoginTitle"
            app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />

        <Button
            android:id="@+id/btn_login"
            android:text="@string/action_login"
            style="@style/SnapcookButton"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>